--- a/src/main/metadata/classes/TriggerAccountTriggerHandlerJP.cls
+++ b/src/main/metadata/classes/TriggerAccountTriggerHandlerJP.cls
@@ -25,12 +25,14 @@ implements TriggerHandlerIf
             
             AccountHelperJP.updateAccountFieldsBeforeInsert(Trigger.new,trigger.isInsert);
             AccountHelperJP.updatePrimaryContactInformationBeforeInsert(Trigger.new,trigger.isInsert);
+			AccountHelperJP.updateCompanyAccountNameBeforeInsert(Trigger.new);
         }
         if(isBefore && isUpdate)
         {
             AccountHelperJP.updateAccountFieldsBeforeUpdate(Trigger.new,(Map<Id,Account>)Trigger.OldMap,trigger.isUpdate);
             AccountHelperJP.updatePrimaryContactInformationBeforeUpdate(Trigger.new,(Map<Id,Account>)Trigger.OldMap,trigger.isUpdate);
             AccountHelperJP.updatePrimaryAddressdisplay(Trigger.new,trigger.isUpdate);
+			AccountHelperJP.updateCompanyAccountNameBeforeInsert(Trigger.new);
         }
         if(isAfter && isInsert && !System.isFuture())
         {
